# soft_framework

./: CMakeLists.txt  FARMEWORK.sh  README.MD
include/: config.h.in
test/: main.c
